# walcft

./: .gitconfig  .gitignore  Cargo.toml  README.md  build.sh  build_docker.sh  build_local.sh
crates/ft/: Cargo.toml
crates/ft-tests/: Cargo.toml
crates/ft-tests/tests/: ft.rs
crates/ft-tests/tests/util/: call.rs  mod.rs
crates/ft/src/: storage.rs
src/: ft_core.rs  lib.rs
tests/: dao_upgrade.rs  ft.rs
tests/util/: call.rs  mod.rs  view.rs
